--- a/style.css
+++ b/style.css
@@ -86,6 +86,19 @@ header > img {
     font-family: 'Montserrat', sans-serif;
 }
 
+.kup:hover {
+    color: red;
+    background-color: white;
+    padding: 12px;
+    padding-left: 60px;
+    padding-right: 60px;
+    border-radius: 60px;
+    font-size: 30px;
+    margin-bottom: 50px;
+    font-family: 'Montserrat', sans-serif;
+    transition: 0.4s;
+}
+
 @media (max-width: 1020px) {
     .na-topie {
         background: url(images/bg_1500wdth.jpg);
