--- a/style.css
+++ b/style.css
@@ -16,18 +16,24 @@ header {
     align-items: center;
 }
 
-header > p {
+header > a {
     font-family: 'Montserrat', sans-serif;
-    margin-left: -50px;
+    color: black;
+    text-decoration: none;
     transition: 0.2s;
 }
 
-header > p:hover {
+header > a:hover {
     color: #F2B705;
 }
 
 header > img {
-    width: 250px;
+    width: 150px;
+    padding: 15px;
+}
+
+#active, .menu-btn, .close, .wrapper {
+    display: none;
 }
 
 .na-topie {
@@ -87,20 +93,175 @@ header > img {
     font-family: 'Montserrat', sans-serif;
 }
 
-.kup:hover {
-    color: red;
-    background-color: white;
-    padding: 12px;
-    padding-left: 60px;
-    padding-right: 60px;
-    border-radius: 60px;
-    font-size: 30px;
-    margin-bottom: 50px;
-    font-family: 'Montserrat', sans-serif;
-    transition: 0.4s;
-}
-
 @media (max-width: 1020px) {
+
+    header > a:not(ul) {
+        display: none;
+    }
+
+    header {
+        gap: 600px;
+    }
+
+    /*-------------------------------*/
+
+    .menu-btn, .close, .wrapper {
+        display: flex;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Montserrat', sans-serif;
+      }
+      .wrapper{
+        position: fixed;
+        top: 0;
+        /*left: -100%;*/
+        right: -100%;
+        height: 100%;
+        width: 100%;
+        background: #000;
+        transition: all 0.6s ease-in-out;
+      }
+      #active:checked ~ .wrapper{
+        /*left: 0;*/
+        right:0;
+      }
+      .menu-btn{
+        position: absolute;
+        z-index: 2;
+        right: 20px;
+        /*left: 20px; */
+        top: 20px;
+        height: 50px;
+        width: 50px;
+        text-align: center;
+        line-height: 50px;
+        border-radius: 50%;
+        font-size: 20px;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+      }
+      .menu-btn span,
+      .menu-btn:before,
+      .menu-btn:after{
+          content: "";
+          position: absolute;
+          top: calc(50% - 1px);
+          left: 30%;
+          width: 40%;
+          border-bottom: 2px solid #000;
+          transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+      }
+      .menu-btn:before{
+        transform: translateY(-8px);
+      }
+      .menu-btn:after{
+        transform: translateY(8px);
+      }
+      
+      .close {
+          z-index: 1;
+          height: 100%;
+          pointer-events: none;
+          transition: 0.6s;
+      }
+      
+      /* closing animation */
+      #active:checked + .menu-btn span {
+          transform: scaleX(0);
+      }
+      #active:checked + .menu-btn:before {
+          transform: rotate(45deg);
+        border-color: #fff;
+      }
+      #active:checked + .menu-btn:after {
+          transform: rotate(-45deg);
+        border-color: #fff;
+      }
+      .wrapper ul{
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        height: 90%;
+        transform: translate(-50%, -50%);
+        list-style: none;
+        text-align: center;
+      }
+      .wrapper ul li{
+        height: 10%;
+        margin: 15px 0;
+      }
+      .wrapper ul li a{
+        text-decoration: none;
+        font-size: 30px;
+        font-weight: 500;
+        padding: 5px 30px;
+        color: #fff;
+        border-radius: 50px;
+        position: absolute;
+        line-height: 50px;
+        margin: 5px 30px;
+        opacity: 0;
+        transition: all 0.3s ease;
+        transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+      }
+      .wrapper ul li a:after{
+        position: absolute;
+        content: "";
+        background: #fff;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        border-radius: 50px;
+        transform: scaleY(0);
+        z-index: -1;
+        transition: transform 0.3s ease;
+      }
+      .wrapper ul li a:hover:after{
+        transform: scaleY(1);
+      }
+      .wrapper ul li a:hover{
+        color: #F2B705;
+      }
+      input[type="checkbox"]{
+        display: none;
+      }
+      .content{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: -1;
+        text-align: center;
+        width: 100%;
+        color: #202020;
+      }
+      .content .title{
+        font-size: 40px;
+        font-weight: 700;
+      }
+      .content p{
+        font-size: 35px;
+        font-weight: 600;
+      }
+      
+      #active:checked ~ .wrapper ul li a{
+        opacity: 1;
+      }
+      .wrapper ul li a{
+        transition: opacity 1.2s, transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
+        transform: translateX(100px);
+      }
+      #active:checked ~ .wrapper ul li a{
+          transform: none;
+          transition-timing-function: ease, cubic-bezier(.1,1.3,.3,1);
+         transition-delay: .6s;
+        transform: translateX(-100px);
+      }
+
+    /*-------------------------------*/
+
     .na-topie {
         background: url(images/bg_1500wdth.jpg);
         flex-flow: column;
