--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header > img {
     display: none;
 }
 
-/*----------------------*/
+/*----------MAIN------------*/
 
 main { 
   display: flex;
@@ -50,7 +50,7 @@ main {
 
 .na-topie {
     display: flex;
-    margin-top: 100px;
+    padding-top: 100px;
     width: 100%;
     justify-content: center;
     flex-flow: column;
@@ -75,6 +75,20 @@ main {
   background: -webkit-linear-gradient(180deg, rgba(93,217,0,1) 0%, rgba(100,223,0,1) 21%, rgba(97,218,0,1) 100%);
   background: linear-gradient(180deg, rgba(93,217,0,1) 0%, rgba(100,223,0,1) 21%, rgba(97,218,0,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5dd900",endColorstr="#61da00",GradientType=1);
+}
+
+.do-biegania {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  flex-flow: column;
+  align-items: center;
+  gap: 100px;
+  background: rgb(87,87,87);
+  background: -moz-linear-gradient(180deg, rgba(87,87,87,1) 0%, rgba(129,129,129,1) 46%, rgba(106,106,106,1) 100%);
+  background: -webkit-linear-gradient(180deg, rgba(87,87,87,1) 0%, rgba(129,129,129,1) 46%, rgba(106,106,106,1) 100%);
+  background: linear-gradient(180deg, rgba(87,87,87,1) 0%, rgba(129,129,129,1) 46%, rgba(106,106,106,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#575757",endColorstr="#6a6a6a",GradientType=1);
 }
 
 .categories {
@@ -125,21 +139,59 @@ main {
     margin-bottom: 50px;
     font-family: 'Montserrat', sans-serif;
     transition: 0.3s;
+    text-decoration: none;
+}
+
+.kup-text {
+  color: white;
 }
 
 .kup:hover {
   color: red;
   background-color: white;
   padding: 12px;
-  padding-left: 60px;
-  padding-right: 60px;
+  padding-left: 80px;
   border-radius: 60px;
   font-size: 30px;
   margin-bottom: 50px;
   font-family: 'Montserrat', sans-serif;
 }
 
-@media (max-width: 1020px) {
+/*----------FOOTER------------*/
+
+footer {
+  width: 100%;
+  height: 120px;
+  font-family: "Montserrat", sans-serif;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  z-index: 2;
+}
+
+footer .autor {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  margin: 50px;
+  font-weight: 500;
+}
+
+footer a {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  margin: 50px;
+  transition: all 0.3s ease;
+}
+
+footer a:hover {
+  color: #F2B705;;
+}
+
+/*----------RESPONSIVE------------*/
+
+@media (max-width: 1060px) {
 
     header > a:not(ul) {
         display: none;
@@ -147,6 +199,10 @@ main {
 
     header {
         gap: 600px;
+    }
+
+    .introduce-categories {
+      font-size: 31px;
     }
 
     /*-------------------------------*/
@@ -309,13 +365,18 @@ main {
     /*-------------------------------*/
 
     .na-topie {
-        background: url(images/bg_1500wdth.jpg);
+        background: url(images/bg_na-topie_1280wdth.jpg);
         flex-flow: column;
     }
 
     .na-lato {
         background: url(images/bg_lato_1280wdth.jpg);
         flex-flow: column;
+    }
+
+    .do-biegania {
+      background: url(images/bg_do-biegania_1280wdth.jpg);
+      flex-flow: column;
     }
 
     .introduce-categories {
