--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Roboto+Condensed:ital@1&display=swap');
+html, body {
+  height:100%;
+}
 
 body {
     margin: 0;
+    padding:0;
     box-sizing: border-box;
     background-color: white;
+    background: rgb(238,238,238);
+    background: -moz-linear-gradient(180deg, rgba(238,238,238,1) 0%, rgba(255,255,255,1) 46%, rgba(237,237,237,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(238,238,238,1) 0%, rgba(255,255,255,1) 46%, rgba(237,237,237,1) 100%);
+    background: linear-gradient(180deg, rgba(238,238,238,1) 0%, rgba(255,255,255,1) 46%, rgba(237,237,237,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#eeeeee",endColorstr="#ededed",GradientType=1);
 }
 
 header {
@@ -17,6 +27,7 @@ header {
     gap: 180px;
     position: fixed;
     align-items: center;
+    z-index: 2;
 }
 
 header > a {
@@ -43,9 +54,9 @@ header > img {
 
 main { 
   display: flex;
-  flex-flow: column;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   gap: 100px;
+  min-height:100%;
 }
 
 .na-topie {
@@ -84,6 +95,7 @@ main {
   flex-flow: column;
   align-items: center;
   gap: 100px;
+  padding-bottom:60px;
   background: rgb(87,87,87);
   background: -moz-linear-gradient(180deg, rgba(87,87,87,1) 0%, rgba(129,129,129,1) 46%, rgba(106,106,106,1) 100%);
   background: -webkit-linear-gradient(180deg, rgba(87,87,87,1) 0%, rgba(129,129,129,1) 46%, rgba(106,106,106,1) 100%);
@@ -128,18 +140,53 @@ main {
     margin-left: 60px;
 }
 
+.main-div-categories{
+  display: flex;
+  flex-flow: row wrap;
+  margin-top: 160px;
+  margin-bottom: 80px;
+  gap: 50px;
+  margin-right: 50px;
+  margin-left: 50px;
+  justify-content: center;
+  align-items: center;
+}
+
+.div-categories {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Roboto Condensed', sans-serif;
+  box-shadow: 0px 0px 50px rgba(0,0,0,0.1);
+  border-radius: 5%;
+  height: 300px;
+  width: 300px;
+  transition: all 0.5s ease;
+}
+
+.div-categories:hover {
+  transform: scale(1.1);
+}
+
+.div-categories > img {
+  height: 150px;
+  width: 300px;
+}
+
 .kup {
-    color: white;
-    background-color: red;
-    padding: 12px;
-    padding-left: 60px;
-    padding-right: 60px;
-    border-radius: 60px;
-    font-size: 30px;
-    margin-bottom: 50px;
-    font-family: 'Montserrat', sans-serif;
-    transition: 0.3s;
-    text-decoration: none;
+  display: flex;
+  color: white;
+  background-color: red;
+  padding: 5px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-radius: 100px;
+  font-size: 23px;
+  font-family: 'Montserrat', sans-serif;
+  transition: 0.3s;
+  text-decoration: none;
+  box-shadow: 0px 0px 30px rgba(0,0,0,0.05);
 }
 
 .kup-text {
@@ -149,19 +196,48 @@ main {
 .kup:hover {
   color: red;
   background-color: white;
-  padding: 12px;
-  padding-left: 80px;
-  border-radius: 60px;
-  font-size: 30px;
-  margin-bottom: 50px;
+  padding: 5px;
+  padding-left: 50px;
+  border-radius: 100px;
   font-family: 'Montserrat', sans-serif;
+}
+
+.zobacz {
+  font-size: 0px;
+  color: red;
+  background-color: white;
+  padding: 8px;
+  margin-bottom: 50px;
+  border-radius: 100px;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  transition: 0.2s;
+  box-shadow: 0px 0px 30px rgba(0,0,0,0.1);
+}
+
+.zobacz-text {
+  color: white;
+}
+
+.zobacz:hover {
+  display: flex;
+  color: white;
+  background-color: red;
+  padding: 8px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-radius: 100px;
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
 }
 
 /*----------FOOTER------------*/
 
 footer {
+  bottom: 0;
   width: 100%;
-  height: 120px;
+  height: 100px;
   font-family: "Montserrat", sans-serif;
   background-color: white;
   display: flex;
@@ -172,7 +248,6 @@ footer {
 footer .autor {
   color: black;
   text-decoration: none;
-  font-size: 18px;
   margin: 50px;
   font-weight: 500;
 }
@@ -180,7 +255,6 @@ footer .autor {
 footer a {
   color: black;
   text-decoration: none;
-  font-size: 18px;
   margin: 50px;
   transition: all 0.3s ease;
 }
@@ -199,6 +273,11 @@ footer a:hover {
 
     header {
         gap: 600px;
+    }
+
+    header > img {
+      width: 200px;
+      padding: 2px;
     }
 
     .introduce-categories {
