--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ main {
   justify-content: center;
   align-items: center;
   font-family: 'Roboto Condensed', sans-serif;
+  background-color: whitesmoke;
   box-shadow: 0px 0px 50px rgba(0,0,0,0.1);
   border-radius: 5%;
   height: 300px;
