--- a/style.css
+++ b/style.css
@@ -323,10 +323,13 @@ footer a:hover {
         right: -100%;
         height: 100%;
         width: 100%;
+        justify-content: center;
         background: #000;
         transition: all 0.6s ease-in-out;
       }
-      .wrapper > ul > img {
+      .wrapper > img {
+        margin-top: 80px;
+        height: 180px;
         width: 400px;
       }
       #active:checked ~ .wrapper{
@@ -348,7 +351,7 @@ footer a:hover {
         cursor: pointer;
         transition: all 0.3s ease-in-out;
       }
-      .menu-btn span,
+      .menu-btn > span,
       .menu-btn:before,
       .menu-btn:after{
           content: "";
@@ -385,19 +388,18 @@ footer a:hover {
           transform: rotate(-45deg);
         border-color: #fff;
       }
-      .wrapper ul{
+      .wrapper > ul{
         position: absolute;
-        top: 50%;
-        left: 50%;
+        top: 58%;
+        left: 46%;
         height: 80%;
         transform: translate(-50%, -50%);
         list-style: none;
         text-align: center;
       }
-      .wrapper ul li{
+      .wrapper > ul > li{
         width: 800px;
         height: 10%;
-        margin: 15px 0;
       }
       .menu-categories-natopie {
         color: rgb(249,186,0);
@@ -408,7 +410,7 @@ footer a:hover {
       .menu-categories-dobiegania {
         color: rgb(87,87,87);
       }
-      .wrapper ul li a{
+      .wrapper > ul > li > a{
         text-decoration: none;
         font-size: 30px;
         font-weight: 500;
@@ -421,10 +423,10 @@ footer a:hover {
         transition: all 0.3s ease;
         transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
       }
-      .wrapper ul li a:not(.menu-categories-natopie, .menu-categories-nalato, .menu-categories-dobiegania){
+      .wrapper > ul > li > a:not(.menu-categories-natopie, .menu-categories-nalato, .menu-categories-dobiegania){
         color: white;
       }
-      .wrapper ul li a:after{
+      .wrapper > ul > li > a:after{
         position: absolute;
         content: "";
         background: #fff;
@@ -432,15 +434,15 @@ footer a:hover {
         height: 100%;
         left: 0;
         top: 0;
-        border-radius: 50px;
+        border-radius: 30px;
         transform: scaleY(0);
         z-index: -1;
         transition: transform 0.3s ease;
       }
-      .wrapper ul li a:hover:after{
+      .wrapper > ul > li > a:hover:after{
         transform: scaleY(1);
       }
-      .wrapper ul li a:hover{
+      .wrapper > ul > li > a:hover{
         color: #F2B705;
       }
       input[type="checkbox"]{
@@ -456,23 +458,23 @@ footer a:hover {
         width: 100%;
         color: #202020;
       }
-      .content .title{
+      .content > .title{
         font-size: 40px;
         font-weight: 700;
       }
-      .content p{
+      .content > p{
         font-size: 35px;
         font-weight: 600;
       }
       
-      #active:checked ~ .wrapper ul li a{
+      #active:checked ~ .wrapper > ul > li > a{
         opacity: 1;
       }
-      .wrapper ul li a{
+      .wrapper > ul > li > a{
         transition: opacity 1.2s, transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
         transform: translateX(100px);
       }
-      #active:checked ~ .wrapper ul li a{
+      #active:checked ~ .wrapper > ul > li > a{
           transform: none;
           transition-timing-function: ease, cubic-bezier(.1,1.3,.3,1);
          transition-delay: .6s;
