--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ header {
     gap: 180px;
     position: fixed;
     align-items: center;
+    z-index: 2;
 }
 
 header > a {
@@ -57,6 +58,28 @@ main {
   flex-flow: row wrap;
   gap: 100px;
   min-height:100%;
+  justify-content: center;
+}
+
+.search {
+  position: absolute;
+  width: 250px;
+  height: 40px;
+  margin-top: 320px;
+  border: none;
+  box-shadow: 0px 0px 30px rgba(0,0,0,0.1);
+  border-radius: 50px;
+}
+
+.search[type=text] {
+  padding-left: 40px;
+  font-size: 16px;
+  font-family: 'Roboto Condensed', sans-serif;
+  transition: 0.03s;
+}
+
+.search[type=text]:focus {
+  outline: solid #F2B705;
 }
 
 .na-topie {
@@ -167,7 +190,7 @@ main {
 .main-div-categories{
   display: flex;
   flex-flow: row wrap;
-  margin-top: 160px;
+  margin-top: 200px;
   margin-bottom: 80px;
   gap: 50px;
   margin-right: 50px;
@@ -305,6 +328,15 @@ footer a:hover {
     header > img {
       width: 200px;
       padding: 2px;
+    }
+
+    .search {
+      width: 400px;
+      height: 80px;
+    }
+    
+    .search[type=text] {
+      font-size: 30px;
     }
 
     /*-------------------------------*/
