--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
     background-color: white;
     height: 100px;
     width: 100%;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-flow: row wrap;
     flex-grow: 4;
     gap: 180px;
@@ -42,13 +42,21 @@ header > a:hover {
     color: #F2B705;
 }
 
-header > img {
+header > img:not(.logos) {
     width: 150px;
     padding: 15px;
 }
 
 #active, .menu-btn, .close, .wrapper {
     display: none;
+}
+
+.logos {
+  margin-right: 20px;
+}
+
+.logos > a {
+  margin-right: 30px;
 }
 
 /*----------MAIN------------*/
@@ -74,12 +82,51 @@ main {
 .search[type=text] {
   padding-left: 40px;
   font-size: 16px;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   transition: 0.03s;
 }
 
 .search[type=text]:focus {
   outline: solid #F2B705;
+}
+
+.contact {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  margin-top: 200px;
+  margin-bottom: 100px;
+}
+
+.contact > textarea {
+  border: solid #F2B705;
+  font-family: 'Montserrat', sans-serif;
+  padding: 30px;
+  border-radius: 50px;
+  transition: 1s;
+}
+
+.contact > textarea:focus {
+  outline: #F2B705;
+  transform: scale(1.03);
+}
+
+.contact > button {
+  font-size: large;
+  margin-top: 20px;
+  position: relative;
+  border: none;
+  font-family: 'Montserrat', sans-serif;
+  transition: 0.01s;
+}
+
+.reset:hover {
+  border-bottom: solid red;
+  margin-bottom: -10px;
+}
+
+.post:hover {
+  border-bottom: solid rgb(93,217,0);
+  margin-bottom: -10px;
 }
 
 .na-topie {
@@ -293,6 +340,7 @@ footer {
   background-color: white;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 footer .autor {
@@ -317,7 +365,7 @@ footer a:hover {
 
 @media (max-width: 1060px) {
 
-    header > a:not(ul) {
+    header > a,.logos:not(ul) {
         display: none;
     }
 
