--- a/style.css
+++ b/style.css
@@ -282,11 +282,11 @@ main {
   border-radius: 5%;
   height: 300px;
   width: 300px;
-  transition: all 0.5s ease;
+  transition: all 0.1s ease;
 }
 
 .div-categories:hover {
-  transform: scale(1.05);
+  box-shadow: 0px 0px 5px gray;
 }
 
 .models {
@@ -367,7 +367,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-top: solid rgb(220,0,255);
+  border-top: solid 2px rgb(220,0,255);
   z-index: 2;
 }
 
