--- a/style.css
+++ b/style.css
@@ -46,8 +46,13 @@ header {
 .underline-text {
   font-family: 'Montserrat', sans-serif;
   position: relative;
-  color: rgb(220,0,255);
+  color: black;
   text-decoration: none;
+  transition: 0.3s ease;
+}
+
+.underline-text:hover {
+  color: rgb(220,0,255);
 }
 
 .underline-text::before {
@@ -55,7 +60,7 @@ header {
   position: absolute;
   display: block;
   width: 110%;
-  height: 2px;
+  height: 1px;
   bottom: -2px;
   right: -4px;
   background-color: rgb(220,0,255);
@@ -339,7 +344,7 @@ main {
 }
 
 .div-categories:hover {
-  box-shadow: 0px 0px 5px gray;
+  box-shadow: 0px 0px 50px rgba(0,0,0,0.2);
 }
 
 .models {
@@ -416,14 +421,14 @@ main {
 
 footer {
   bottom: 0;
+  margin-top: 100px;
   width: 100%;
   height: 100px;
   font-family: "Montserrat", sans-serif;
-  background-color: white;
+  background-color: whitesmoke;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-top: solid 2px rgb(220,0,255);
   z-index: 2;
 }
 
