--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ header {
 main { 
   display: flex;
   flex-flow: row wrap;
-  gap: 100px;
+  gap: 80px;
   min-height:100%;
   justify-content: center;
 }
@@ -178,8 +178,7 @@ main {
   justify-content: space-around;
   flex-flow: row wrap;
   align-items: center;
-  background-color: whitesmoke;
-  border: solid 5px red;
+  background-color: rgba(0,0,0,0.05);
 }
 
 .nowosc > div {
@@ -421,7 +420,6 @@ main {
 
 footer {
   bottom: 0;
-  margin-top: 100px;
   width: 100%;
   height: 100px;
   font-family: "Montserrat", sans-serif;
