--- a/style.css
+++ b/style.css
@@ -14,16 +14,30 @@ body {
 
 header {
     display: flex;
-    background: none;
+    background: whitesmoke;
     height: 130px;
     width: 100%;
     justify-content: space-between;
     flex-flow: row wrap;
     flex-grow: 4;
     gap: 180px;
-    position: absolute;
+    position: fixed;
     align-items: center;
     z-index: 2;
+}
+
+.header-main {
+  display: flex;
+  background: none;
+  height: 130px;
+  width: 100%;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  flex-grow: 4;
+  gap: 180px;
+  position: absolute;
+  align-items: center;
+  z-index: 2;
 }
 
 .first-header {
@@ -49,6 +63,10 @@ header {
   color: black;
   text-decoration: none;
   transition: 0.3s ease;
+}
+
+.wrapper .underline-text{
+  color: rgb(220,0,255);
 }
 
 .underline-text:hover {
@@ -99,7 +117,7 @@ main {
   position: absolute;
   width: 250px;
   height: 40px;
-  margin-top: 320px;
+  margin-top: 300px;
   border: none;
   box-shadow: 0px 0px 30px rgba(0,0,0,0.1);
   border-radius: 50px;
@@ -335,7 +353,7 @@ main {
   justify-content: center;
   align-items: center;
   font-family: 'Roboto Condensed', sans-serif;
-  background-color: whitesmoke;
+  background-color: rgba(0,0,0,0.05);
   border-radius: 5%;
   height: 300px;
   width: 300px;
@@ -595,14 +613,14 @@ footer a {
         transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
       }
 
-      .underline-text-sec {
+      .underline-text-sec, .underline-text-sec-nowosc {
         font-family: 'Montserrat', sans-serif;
         position: relative;
         color: white;
         text-decoration: none;
       }
       
-      .underline-text-sec::before {
+      .underline-text-sec::before, .underline-text-sec-nowosc::before {
         content: "";
         position: absolute;
         display: block;
@@ -614,12 +632,12 @@ footer a {
         transform: scaleX(0);
         transition: transform 0.3s ease;
       }
-      
-      .underline-text-sec:first-child::before {
+
+      .underline-text-sec-nowosc::before {
         background-color: red;
       }
 
-      .underline-text-sec:hover::before {
+      .underline-text-sec:hover::before, .underline-text-sec-nowosc:hover::before {
         transform: scaleX(1);
       }
 
